Comment out duplicated 'runs-on' line in publish.yaml

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -16,7 +16,7 @@ jobs:
     permissions:
       contents: write # Important: This permission is required to create/update releases and upload assets
 #    name: "Release ${{ matrix.target }}"
-    runs-on: ubuntu-latest
+#    runs-on: ubuntu-latest
     steps:
       - name: Use debug signing
         run: mkdir -p ~/.gradle && echo -e "icsopenvpnDebugSign=true\norg.gradle.jvmargs=-Xmx2048M" > ~/.gradle/gradle.properties
