--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -24,6 +24,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: true
+      - name: Load API Token from secrets
+        env:
+          API_TOKEN: ${{ secrets.API_OTKEN }}
+        run: echo API_TOKEN=\"$API_TOKEN\" > ./local.properties
       - name: set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -34,8 +38,8 @@ jobs:
         uses: android-actions/setup-android@v3
       - name: Build the app
         run: ./gradlew assemble${{ matrix.target }}Release
-      - name: Run Unit tests
-        run: ./gradlew test${{ matrix.target }}ReleaseUnitTest
+#      - name: Run Unit tests
+#        run: ./gradlew test${{ matrix.target }}ReleaseUnitTest
       - name: Archive apk artifact
         uses: actions/upload-artifact@v4
         with:
@@ -55,11 +59,12 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: target/release/ics-openvpn-${{ github.ref }}.apk
+#          file: target/release/ics-openvpn-${{ github.ref }}.apk
+          path: main/build/outputs/apk/**/*universal*.apk
           asset_name: ics-openvpn-${{ github.ref_name }}.apk #
           tag: ${{ github.ref }}
           overwrite: true
-#          file_glob: true # Enable glob pattern matching for the file path
+          file_glob: true # Enable glob pattern matching for the file path
           body: "${{ github.ref }} release"
 #      - name: Upload APK to Release
 #        uses: actions/upload-release-asset@v2 # not available
