--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -56,7 +56,7 @@ jobs:
           draft: false
           prerelease: false
       - name: Upload binaries to release
-        uses: svenstaro/upload-release-action@v2
+        uses: svenstaro/upload-release-action@v2 # https://github.com/svenstaro/upload-release-action
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
 #          file: target/release/ics-openvpn-${{ github.ref }}.apk
