--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -5,25 +5,33 @@ on:
     tags:
       - 'v*' # Trigger the workflow when a tag starting with 'v' is pushed (e.g., v1.0.0)
 
+
   workflow_dispatch:
     inputs:
-      logLevel:
-        description: 'Log level'
-        required: true
-        default: 'warning'
-        type: choice
-        options:
-        - info
-        - warning
-        - debug
-      tags:
-        description: 'Test scenario tags'
-        required: false
-        type: boolean
-      environment:
-        description: 'Environment to run tests against'
-        type: environment
-        required: true
+      body:
+        default: ""
+      test:
+        default: "false"
+#  pull_request_target: 
+#  workflow_dispatch:
+#    inputs:
+#      logLevel:
+#        description: 'Log level'
+#        required: true
+#        default: 'warning'
+#        type: choice
+#        options:
+#        - info
+#        - warning
+#        - debug
+#      tags:
+#        description: 'Test scenario tags'
+#        required: false
+#        type: boolean
+#      environment:
+#        description: 'Environment to run tests against'
+#        type: environment
+#        required: true
 
 jobs:
   build-and-upload:
