--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,9 +1,9 @@
 name: Publish
 
 on:
-  push:
-    tags:
-      - 'v*' # Trigger the workflow when a tag starting with 'v' is pushed (e.g., v1.0.0)
+#  push:
+#    tags:
+#      - 'v*' # Trigger the workflow when a tag starting with 'v' is pushed (e.g., v1.0.0)
 
 
   workflow_dispatch:
