--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,12 +1,15 @@
 name: Publish
 
-on:
+#on:
 #  push:
 #    tags:
 #      - 'v*' # Trigger the workflow when a tag starting with 'v' is pushed (e.g., v1.0.0)
 
-
+on:
   workflow_dispatch:
+    tags:
+      - 'v*' # Trigger the workflow when a tag starting with 'v' is pushed (e.g., v1.0.0)
+
 #    inputs:
 #      body:
 #        default: ""
