--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -7,8 +7,8 @@ name: Publish
 
 on:
   workflow_dispatch:
-    tags:
-      - 'v*' # Trigger the workflow when a tag starting with 'v' is pushed (e.g., v1.0.0)
+#    tags:
+#      - 'v*' # Trigger the workflow when a tag starting with 'v' is pushed (e.g., v1.0.0)
 
 #    inputs:
 #      body:
